# spot-server

./: .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  docker-compose.yml  nginx.conf
.github/: copilot-instructions.md
src/: main.rs
src/api/: albums.rs  artists.rs  base.rs  charts.rs  mod.rs  newreleases.rs  playlists.rs  songs.rs  trending.rs
src/models/: album.rs  artist.rs  error.rs  images.rs  mod.rs  playlist.rs  song.rs  stream_urls.rs
src/utils/: encryption.rs  formatting.rs  mod.rs
