[package]
name = "spot-server"
version = "1.0.0"
edition = "2021"
description = "Unofficial JSON API for Gaana.com music streaming service"
authors = ["Harshith Doddipalli <hdr8712865491@gmail.com>"]

[dependencies]
# Web framework
axum = { version = "0.7", features = ["macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace"] }

# Async runtime
tokio = { version = "1.0", features = ["full"] }

# HTTP client
reqwest = { version = "0.11", features = ["json"] }

# JSON serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Encryption for stream URLs
aes = "0.8"
cbc = { version = "0.1", features = ["alloc"] }
hex = "0.4"
base64 = "0.21"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Environment variables
dotenvy = "0.15"

# URL handling
url = "2.4"
urlencoding = "2.1"

# Documentation
utoipa = { version = "4.0", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "6.0", features = ["axum"] }

futures = "0.3"
